--- a/register.html
+++ b/register.html
@@ -33,7 +33,7 @@
     <footer>
 
     </footer>
-    <script src="displayinfo.js"></script>
-    <script src="register.js"></script>
+    <script src="scripts/displayinfo.js"></script>
+    <script src="scripts/register.js"></script>
 </body>
 </html>
