--- a/index.html
+++ b/index.html
@@ -4,19 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pet Salon</title>
+    <link rel="stylesheet" href="styles/mystyle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@100&family=Oswald:wght@200;300;500&display=swap" rel="stylesheet">
+    <title>The Groom Room</title>
 </head>
 <body>
+    <nav class="nav-bar">
+        <a href="index.html"><img src="images/navlogo.jpeg"></a>
+        <div class="nav-links">
+            <a href="register.html">Register</a>
+            <a href="#">Services</a>
+        </div>
+    </nav>
     <header>
-        <h1>The Pet Salon</h1>
+        <h1>Welcome to The Groom Room!</h1>
     </header>
     <main>
-        <ul id="student-info">
+        <div id="salon-info">
 
-        </ul>
+        </div>
     </main>
     <footer id="footer-info">
-
+        <h3>HELLLO</h3>
     </footer>
     <script src="scripts/displayinfo.js"></script>
 </body>
