FSDI 104 Pet Salon
Final Website Design, working registration. Search function for pet name and service. Completed services page

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
     <nav class="nav-bar">
         <a href="index.html"><img src="images/navlogo.jpeg"></a>
         <div class="nav-links">
+            <a href="index.html">Home</a>
             <a href="register.html">Register</a>
-            <a href="#">Services</a>
+            <a href="services.html">Services</a>
         </div>
     </nav>
     <header>
@@ -28,7 +29,6 @@
         </div>
     </main>
     <footer id="footer-info">
-        <h3>HELLLO</h3>
     </footer>
     <script src="scripts/displayinfo.js"></script>
 </body>
